@@ -4,6 +4,8 @@
   option. This is handy when you are working on multiple
   projects. Refer the variable docs and README for more details.
 - Replace Cask with Eask for CI testing.
+- Implement ~rustic-cargo-nextest-current-test~ for running test at a
+  point using nextest.
 
 * 3.5
 
